--- a/index.html
+++ b/index.html
@@ -1809,8 +1809,10 @@
 
         </div>
     </div>
-    <Script src="scripts/controller/CalcController.js"></Script>
+
+    <script src="scripts/controller/CalcController.js"></script>
     <script src="scripts/calculator.js"></script>
+    
 </body>
 
 </html>
